--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=hr-payroll
 server.port=8101
 
+hr-worker.host=http://localhost:8001
+
 #server.port=${PORT:0}
 #
 #eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
