--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=hr-payroll
 server.port=8101
 
+hr-worker.ribbon.listOfServers=localhost:8001,localhost:8002
+
+eureka.client.enabled=false
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
 #server.port=${PORT:0}
 #
 #eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
