--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=hr-worker
 server.port=8001
 
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
 #server.port=${PORT:0}
 
 #eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
