--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.cloud.config.server.git.default-label=main
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/Setoue/microservice-work-config
-#spring.cloud.config.server.git.username=${GIT_USERNAME}
-#spring.cloud.config.server.git.password=${GIT_TOKEN}
+spring.cloud.config.server.git.username=${GIT_USERNAME}
+spring.cloud.config.server.git.password=${GIT_TOKEN}
